<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8EFEDED"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:text="@string/microsoft_teams"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        app:srcCompat="@drawable/microsoft_teams"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="311dp"
        android:layout_height="392dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/get_started_with_your_work_school_or_personal_microsoft_account"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/bgmail"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="13dp"
            android:text="@string/sign_in" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:clickable="true"

            android:text="@string/get_help_with_sign_in"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck"
            android:focusable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bgjoin"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/join_a_meeting"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck"
            android:focusable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bgjoin"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/sign_up_for_free"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="15sp"
            android:focusable="true" />

    </LinearLayout>


</LinearLayout>